feat(*): create utils, export dropdown, UI item-add

--- a/public/index.html
+++ b/public/index.html
@@ -40,4 +40,25 @@ img {
   max-width: 100%;
   height: auto;
 }
+
+input,
+label,
+select,
+button,
+textarea {
+	margin: 0;
+	border: 0;
+	padding: 0;
+	display: inline-block;
+	vertical-align: middle;
+	white-space: normal;
+	background: none;
+	line-height: 1;
+}
+
+/* Remove the stupid outer glow in Webkit */
+input:focus {
+	outline: none;
+}
+
 </style>
