feat(colors): dark mode p1

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,11 @@
 html {
   box-sizing: border-box;
   font-size: 16px;
+  height: 100%;
+}
+
+body {
+  height: 100%;
 }
 
 *, *:before, *:after {
